--- a/.github/workflows/wheel-windows.yml
+++ b/.github/workflows/wheel-windows.yml
@@ -72,9 +72,11 @@ jobs:
   #       name: quala-whl-${{ matrix.python-version }}
   #       path: dist
   #   - name: 'Install quala'
-  #     run: python -m pip install --find-links=dist quala
+  #     run: |
+  #       python -m pip install --find-links=dist quala
+  #       python -m pip install pytest
   #   - name: 'Run tests'
-  #     run: python ./src/quala/test.py
+  #     run: python -m pytest
 
   release:
     if: ${{ github.event.action == 'released' || github.event.action == 'prereleased' }}
