Implement Broyden's “Good” method

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(quala-obj OBJECT
     "src/lbfgs.cpp"
 
     "include/quala/anderson-acceleration.hpp"
+    "include/quala/broyden-good.hpp"
     "include/quala/lbfgs.hpp"
     "include/quala/decl/lbfgs.hpp"
     "include/quala/decl/lbfgs-fwd.hpp"
