--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,15 @@
-# Target options
-# --------------
+cmake_minimum_required(VERSION 3.17)
+project(quala VERSION 0.0.1 LANGUAGES CXX)
+set(PY_VERSION_SUFFIX "a0")
+
+# Compiler options
+include(cmake/GlobalCompilerOptions.cmake)
+
+# Eigen linear algebra library
+find_package(Eigen3 REQUIRED)
+
+# Quala library
+# -------------
 
 add_library(quala-obj OBJECT
     "src/lbfgs.cpp"
@@ -15,15 +25,14 @@ add_library(quala-obj OBJECT
     "include/quala/util/ringbuffer.hpp"
     "include/quala/util/vec.hpp"
 )
+target_compile_features(quala-obj PUBLIC cxx_std_17)
 add_library(quala::quala-obj ALIAS quala-obj)
-set_property(TARGET quala-obj PROPERTY POSITION_INDEPENDENT_CODE 1)
 target_include_directories(quala-obj
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
     PRIVATE
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
-)
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>)
 target_link_libraries(quala-obj PUBLIC Eigen3::Eigen)
 
 add_library(quala)
@@ -34,15 +43,13 @@ set_target_properties(quala PROPERTIES EXPORT_NAME quala::quala)
 # Target installation
 # -------------------
 
-if (NOT SKBUILD)
-    include(cmake/Install.cmake)
-endif()
+include(cmake/Install.cmake)
 
 # Python bindings
 # ---------------
 
-option(WITH_PYTHON_BINDINGS "Build the Python module" Off)
-
-if (WITH_PYTHON_BINDINGS OR SKBUILD)
-    add_subdirectory(quala)
+option(QUALA_WITH_PYTHON_BINDINGS 
+    "Build the Python module" Off)
+if (QUALA_WITH_PYTHON_BINDINGS)
+    add_subdirectory(python)
 endif()
