--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 build
 _skbuild
 *-venv
-.cache
+.*cache
 __pycache__
-.mypy_cache
 dist
 wheelhouse
 *.egg-info
 .ipynb_checkpoints
 .vscode/*
+.vs
 !.vscode/cmake-variants.yaml
 !.vscode/launch.json
 !.vscode/settings.json
