--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,14 @@ find_package(Python3 REQUIRED COMPONENTS Interpreter)
 message(STATUS "Found Python ${Python3_VERSION}")
 
 # Test executable compilation and linking
-file(GLOB test_files *.cpp)
-add_executable(tests ${test_files})
+add_executable(tests
+    "eigen-matchers.hpp"
+    "test-alloc.cpp"
+    "test-anderson-acceleration.cpp"
+    "test-lbfgs.cpp"
+    "test-limited-memory-qr.cpp"
+    "test-ringbuffer.cpp"
+)
 target_include_directories(tests
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}
