Update install scripts

--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -95,7 +95,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: py-venv
-        key: ${{ runner.os }}-${{ steps.python.outputs.python-version }}-${{ hashFiles('scripts/install-eigen.ps1', 'scripts/install-casadi-static.ps1') }}
+        key: ${{ runner.os }}-${{ steps.python.outputs.python-version }}-${{ hashFiles('scripts/install-eigen.ps1') }}
     - name: Install Python Dependencies 
       if: steps.cache-venv.outputs.cache-hit != 'true'
       shell: powershell
@@ -103,7 +103,6 @@ jobs:
         python -m venv py-venv
         ./py-venv/Scripts/Activate.ps1
         ./scripts/install-eigen.ps1
-        ./scripts/install-casadi-static.ps1
         python -m pip install build
       env:
         CXXFLAGS: "/bigobj"
@@ -186,7 +185,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: py-venv
-        key: ${{ runner.os }}-${{ steps.python.outputs.python-version }}-${{ hashFiles('scripts/install-eigen.sh', 'scripts/install-casadi-static.sh') }}-skylake
+        key: ${{ runner.os }}-${{ steps.python.outputs.python-version }}-${{ hashFiles('scripts/install-eigen.sh') }}-skylake
     - name: Install Python Dependencies 
       if: steps.cache-venv.outputs.cache-hit != 'true'
       run: |
@@ -196,9 +195,6 @@ jobs:
         CC="$(brew --prefix llvm@14)/bin/clang" \
         CXX="$(brew --prefix llvm@14)/bin/clang++" \
           ./scripts/install-eigen.sh
-        CC="$(brew --prefix llvm@14)/bin/clang" \
-        CXX="$(brew --prefix llvm@14)/bin/clang++" \
-          ./scripts/install-casadi-static.sh
       env:
         CXXFLAGS: "-march=sandybridge"
         CFLAGS: "-march=sandybridge"
